.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconttc__c.object
<CustomObject>
    <description>soconttc__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>externalid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconttc_socontract__r.rstk__externalid__c + &apos;_&apos; + TEXT(rstk__soconttc_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconttc_socontract__r.Name + &apos;-&apos; + TEXT(rstk__soconttc_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconttc_chgcomment__c</fullName>
        <label>Change Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconttc_clause__c</fullName>
        <inlineHelpText>Required user-defined field, containing the textual content for this Clause.</inlineHelpText>
        <label>Clause Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__soconttc_currev__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>System assigned Revision. Revision is initialized to 1 on an add, and incremented as Contract Terms Clause records associated with this Contract are modified.</inlineHelpText>
        <label>Current Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconttc_deletable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that the Clause can be deleted on Contract.</inlineHelpText>
        <label>Clause can be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconttc_deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this Clause has been flagged as deleted and cannot be used going forward.</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconttc_desc__c</fullName>
        <inlineHelpText>User-defined alpha-numeric value up to 100 characters in length.</inlineHelpText>
        <label>Clause Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconttc_editable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, allows the editing of this Clause Content when used on a Contract.</inlineHelpText>
        <label>Clause Content can be Edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconttc_revdate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>System assigned Revision Date.  Revision Date is initialized to TODAY on an add, and updated each time a revision is made.</inlineHelpText>
        <label>Current Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconttc_seq__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconttc_socontract__c</fullName>
        <label>Sales Contract</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Terms Clauses</relationshipLabel>
        <relationshipName>soconttcs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soconttc_socttc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Clause</label>
        <referenceTo>rstk__socttc__c</referenceTo>
        <relationshipLabel>Contract Terms Clauses</relationshipLabel>
        <relationshipName>soconttcs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconttc_title__c</fullName>
        <inlineHelpText>User-defined alpha-numeric value up to 50 characters in length.</inlineHelpText>
        <label>Clause Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Contract Terms Clause</label>
    <listViews>
        <fullName>rstk__RS_Contract_Terms_Clauses</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconttc_title__c</columns>
        <columns>rstk__soconttc_desc__c</columns>
        <columns>rstk__soconttc_socontract__c</columns>
        <columns>rstk__soconttc_socttc__c</columns>
        <columns>rstk__soconttc_clause__c</columns>
        <columns>rstk__soconttc_editable__c</columns>
        <columns>rstk__soconttc_deletable__c</columns>
        <columns>rstk__soconttc_deleted__c</columns>
        <columns>rstk__soconttc_currev__c</columns>
        <columns>rstk__soconttc_revdate__c</columns>
        <columns>rstk__soconttc_chgcomment__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Terms Clauses</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Terms Clause</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Terms Clauses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Clause_Content_Required</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(rstk__soconttc_clause__c) == 0</errorConditionFormula>
        <errorMessage>Clause Content is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Clause_Title_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(rstk__soconttc_title__c)</errorConditionFormula>
        <errorMessage>Clause Title is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Deleted_Flag_Conditional_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( rstk__soconttc_deletable__c == FALSE, rstk__soconttc_deleted__c == TRUE)</errorConditionFormula>
        <errorMessage>Deleted cannot be checked when Clause can be deletable flag is unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sales_Contract_Required_in_New_mode</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), ISBLANK(rstk__soconttc_socontract__c))</errorConditionFormula>
        <errorMessage>Sales Contract is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sequence_Required_and_must_greater_than0</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(rstk__soconttc_seq__c), rstk__soconttc_seq__c &lt;= 0)</errorConditionFormula>
        <errorMessage>Sequence is Required and must be Greater Than 0</errorMessage>
    </validationRules>
</CustomObject>